försöker få till länken på förstasidan igen

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
   <h2>Välkommen!</h2>
   <section id="grid1">
-    <p>Är du sugen på att studera i höst kan du kolla in vårt kursutbud <a href="/src/app/courselist">här</a>.</p>
+    <p>Är du sugen på att studera i höst kan du kolla in vårt kursutbud <a routerLink="/courselist" routerLinkActive="current">här</a>.</p>
   </section>
 
   <section id="grid2">
