--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,9 @@
 
   <h2>Välkommen!</h2>
   <section id="grid1">
-    <p>Är du sugen på att studera i höst kan du kolla in vårt kursutbud <a routerLink="/courselist" routerLinkActive="current">här</a>.</p>
+    <p>
+      Är du sugen på att studera i höst kan du kolla in vårt kursutbud under Alla kurser
+    </p>
   </section>
 
   <section id="grid2">
