--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -62,11 +62,12 @@ nav ul li a {
     }
 
     nav ul li {
-        padding: 15px 25px;
+        padding: 15px 15px;
     }
 
     nav ul li a {    
-        font-size: 12px;      
+        font-size: 12px;  
+        white-space: nowrap;    
     }
 
     .current {
