lagt photo by med länk som kommentar i koden

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,10 +14,11 @@
         <h3>Universitetet</h3>
       </div>
     </div>
+    <!--
     Photo by <a
       href="https://unsplash.com/@joyshotsphotography?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Erika
       Fletcher</a> on <a
-      href="https://unsplash.com/photos/brown-and-white-concrete-building-MZxqc6n9qCw?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+      href="https://unsplash.com/photos/brown-and-white-concrete-building-MZxqc6n9qCw?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>-->
   </section>
 
   <section id="grid3">
@@ -27,10 +28,11 @@
         <h3>Utbildning</h3>
       </div>
     </div>
+    <!--
     Photo by <a
       href="https://unsplash.com/@elisa_cb?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Elisa
       Calvet B.</a> on <a
-      href="https://unsplash.com/photos/white-book-on-brown-wooden-table-S3nUOqDmUvc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+      href="https://unsplash.com/photos/white-book-on-brown-wooden-table-S3nUOqDmUvc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>-->
   </section>
 
   <section id="grid4">
@@ -40,10 +42,11 @@
         <h3>Forskning</h3>
       </div>
     </div>
+    <!--
     Photo by <a
       href="https://unsplash.com/@moritz_photography?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Moritz
       Kindler</a> on <a
-      href="https://unsplash.com/photos/a-close-up-of-a-blue-light-in-the-dark-G66K_ERZRhM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+      href="https://unsplash.com/photos/a-close-up-of-a-blue-light-in-the-dark-G66K_ERZRhM?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>-->
   </section>
 
   <section id="grid5">
@@ -53,10 +56,11 @@
         <h3>Campus</h3>
       </div>
     </div>
+     <!--
     Photo by <a
       href="https://unsplash.com/@parkergibbons?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Parker
       Gibbons</a> on <a
-      href="https://unsplash.com/photos/aerial-photography-green-and-white-concrete-building-kfwPJieZVwI?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+      href="https://unsplash.com/photos/aerial-photography-green-and-white-concrete-building-kfwPJieZVwI?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>-->
   </section>
 
   <section id="grid6">
@@ -66,10 +70,11 @@
         <h3>Studentkåren</h3>
       </div>
     </div>
+     <!--
     Photo by <a
       href="https://unsplash.com/@timmossholder?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Tim
       Mossholder</a> on <a
-      href="https://unsplash.com/photos/photography-of-five-people-near-outdoor-during-daytime-hOF1bWoet_Q?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
+      href="https://unsplash.com/photos/photography-of-five-people-near-outdoor-during-daytime-hOF1bWoet_Q?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>-->
   </section>
 
 </main>
