länkat logotypen till startsidan

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <img src="assets/images/logo.png" alt="logotype">
+    <a routerLink="/home"><img src="assets/images/logo.png" alt="logotype"></a>
     <div id="navcontainer">
         <nav>
             <ul>
