--- a/src/app/my-courses/my-courses.component.html
+++ b/src/app/my-courses/my-courses.component.html
@@ -1,9 +1,10 @@
 <main id="main_timetable">
     <h2>Mitt ramschema</h2>
 
-    <!-- div for showing number of courses shown -->
+    <!-- div for showing number of courses shown right now-->
     <div id="quantity_timetable"> Antal kurser: {{myCourses.length}} st.</div>
 
+    <!-- div to show total points from all the choosen courses in the timetable -->
     <div id="totalpoints">Totalt antal poäng: {{totalPoints}} HP</div>
 
     <div id="table_container">
