--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,4 @@
+/* main with display set to grid for layout */
 #main_home {
     display: grid;
     grid-template-columns: auto;
@@ -31,6 +32,7 @@ h2 {
     grid-row: 2/3;
 }
 
+/* images set to grid */
 #grid2 {
     grid-column: 1/5;
     grid-row: 3/4;
@@ -61,6 +63,7 @@ h2 {
     width: 98%;
 }
 
+/* images */
 #img_uni,
 #img_education,
 #img_science,
@@ -70,7 +73,7 @@ h2 {
     max-width: 100%;
     margin: auto;
 }
-
+/* text or headline on the pictures */
 .image-text {
     position: absolute;
     bottom: 0;
@@ -82,6 +85,7 @@ h2 {
     padding: 15px 0;
 }
 
+/* css for screens smaller then 612 pixels */
 @media screen and (max-width: 612px) {
     #main_home {
         grid-template-columns: 100%;
