--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,6 +7,7 @@
     </p>
   </section>
 
+    <!-- section with fake links and headlines to different fake places on the page just for show. And a comment with who took the picture from Unsplash -->
   <section id="grid2">
     <div class="image-container">
       <img src="assets/images/uni.jpeg" alt="building" id="img_uni">
